--- a/neighborhoods.html
+++ b/neighborhoods.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CH Neighborhood Analytics</title>
+    <title>Cleveland Heights Neighborhood Monitor</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <style>
